--- a/index.html
+++ b/index.html
@@ -67,61 +67,60 @@
 		<div class="netscape" style="opacity:0; position:fixed; z-index:999999;">
 			<h1>WHY ARE YOU USING NETSCAPE</h1>
 		</div>
-		<nav class="navbar navbar-default" role="navigation">
-			<div class="container-fluid">
-			    <!-- Brand and toggle get grouped for better mobile display -->
-			    <div class="navbar-header">
-			        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
-			        	<span class="sr-only">Toggle navigation</span>
-				        <span class="icon-bar"></span>
-				        <span class="icon-bar"></span>
-				        <span class="icon-bar"></span>
-				    </button>
-			        
-			        <a class="navbar-brand" href="index.html">MKVL Comp Sci</a>
-			    
-			    </div>
+		<div class="navbar-wrapper">
+		    <div class="container">
+		        <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+		            <div class="container">
+			            <div class="navbar-header">
+			                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				                <span class="sr-only">Toggle navigation</span>
+				                <span class="icon-bar"></span>
+				                <span class="icon-bar"></span>
+				                <span class="icon-bar"></span>
+			                </button>
+			                <a class="navbar-brand" href="#">Markville CompSci</a>
+			            </div>
+			            <div class="navbar-collapse collapse">
+			                <ul class="nav navbar-nav">
+				        	<li class="active"><a href="index.html">Home</a></li>
+				        	<li><a href="resources.html">Resources</a></li>
+				        	<li><a href="opportunities.html">Opportunities</a></li>
+				        	<li class="dropdown">
+						        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <span class="caret"></span></a>
 
-			    <!-- Collect the nav links, forms, and other content for toggling -->
-			    <div class="collapse navbar-collapse" id="navbar-collapse">
-			        <ul class="nav navbar-nav">
-			        	<li class="active"><a href="index.html">Home</a></li>
-			        	<li><a href="resources.html">Resources</a></li>
-			        	<li><a href="opportunities.html">Opportunities</a></li>
-			        	<li class="dropdown">
-				            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <span class="caret"></span></a>
-				          	<ul class="dropdown-menu" role="menu">
-					          	<li><a href="#">Robotics</a></li>
-					            <li><a href="#">HTML</a></li>
-					            <li><a href="#">Turing</a></li>
-					            <li><a href="#">Java</a></li>
-					            <li><a href="#">Android</a></li>
-					            <li class="divider"></li>
-					            <li><a href="gallery.html">View All &raquo;</a></li>
-					        </ul>
-				        </li>
-			        </ul>
+					          	<ul class="dropdown-menu" role="menu">
+						          	<li><a href="#">Robotics</a></li>
+						          	<li class="divider"></li>
+						            <li><a href="#">HTML</a></li>
+						            <li><a href="#">Turing</a></li>
+						            <li><a href="#">Java</a></li>
+						            <li><a href="#">Android</a></li>
+						        </ul>
+					        </li>
 
-	                <ul class="nav navbar-nav navbar-right">
-	             		<li class="dropdown">
-		                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses <span class="caret"></span></a>
-				          	<ul class="dropdown-menu" role="menu">
-					            <li><a href="courses/btt101.html">BTT1DG</a></li>
-					            <li><a href="courses/ics2dg.html">ICS2DG</a></li>
-					            <li><a href="courses/ics2O1.html">ICS2O1</a></li>
-					            <li><a href="courses/ics3u1.html">ICS3U1</a></li>
-					            <li><a href="courses/ics3c1.html">ICS3C1</a></li>
-					            <li><a href="courses/ics4u1.html">ICS4U1</a></li>
-					            <li><a href="courses/ics4c1.html">ICS4C1</a></li>
-					            <li class="divider"></li>
-					            <li><a href="courses.html">View all &raquo;</a></li>
-					        </ul>
-		                </li>
-	                </ul>
+			                </ul>
+			                <ul class="nav navbar-nav navbar-right">
+			             		<li class="dropdown">
+				                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses <span class="caret"></span></a>
+						          	<ul class="dropdown-menu" role="menu">
+							            <li><a href="courses/btt101.html">BTT1DG</a></li>
+							            <li><a href="courses/ics2dg.html">ICS2DG</a></li>
+							            <li><a href="courses/ics2O1.html">ICS2O1</a></li>
+							            <li><a href="courses/ics3u1.html">ICS3U1</a></li>
+							            <li><a href="courses/ics3c1.html">ICS3C1</a></li>
+							            <li><a href="courses/ics4u1.html">ICS4U1</a></li>
+							            <li><a href="courses/ics4c1.html">ICS4C1</a></li>
+							            <li class="divider"></li>
+							            <li><a href="courses.html">View all &raquo;</a></li>
+							        </ul>
+				                </li>
 
-			    </div><!-- /.navbar-collapse -->
-			</div><!-- /.container-fluid -->
-		</nav>
+			                </ul>
+			            </div>
+			        </div>
+		        </div>
+		      </div>
+		</div>
 
 		<div class="center">
 			<div class="container-fluid">
