--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
 
 		<title>Home | Department of Computer Science </title>
 		<!-- FONTS -->
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-
-		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+		
 		<link href="css/styles.css" rel='stylesheet'>
 
-		<script src="js/jquery.js"></script>
-		<script src="js/bootstrap.js"></script>
-		<script src="js/holder.js"></script>
-		<script src="js/nicescroll.js"></script>
+		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 		<script>
 		$(function() {
@@ -122,7 +123,7 @@
 		      </div>
 		</div>
 
-		<div class="center">
+		<div class="center content">
 			<div class="container-fluid">
 
 				<div id="carousel" class="carousel slide" data-ride="carousel">
