--- a/courses.html
+++ b/courses.html
@@ -123,21 +123,9 @@
 				<div class="row">
 					<div class="col-md-8">
 						<div class="bs-callout bs-callout-default">
-							<div class="container-fluid">
-								<div class="row">
-									<div class="col-md-4">
-										<h1 style="float:left; color:#777; margin-top:0px;">&nbsp;9</h1>
-									</div>
-									<div class="col-md-4">
-									  	<h4 style="font-size:1.6em;">BTT1DG</h4>
-								  	</div>
-								  	<div class="col-md-4">
-									    <a href="courses/btt101.html" style="float:right; display:inline; margin-top:-40px;">
-										    <button class="btn" style="background-color:#777; color:#FFF"> Learn More &raquo;</button>
-									    </a>
-								    </div>
-							    </div>
-						    </div>
+						<h1 style="float:left; color:#777; margin-top:0px;">9</h1>
+						  	<h4 style="font-size:1.6em;">BTT1DG</h4>
+						    <a href="courses/ics2dg.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn" style="background-color:#777; color:#FFF"> Learn More »</button></a>
 						</div>
 						<div class="bs-callout bs-callout-primary">
 						<h1 style="float:left; color:#428BCA; margin-top:0px;">10</h1>
