--- a/index.html
+++ b/index.html
@@ -91,8 +91,10 @@
 						        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <span class="caret"></span></a>
 
 					          	<ul class="dropdown-menu" role="menu">
+						          	<li role="presentation" class="dropdown-header">engineering</li>
 						          	<li><a href="#">Robotics</a></li>
 						          	<li class="divider"></li>
+					          	    <li role="presentation" class="dropdown-header">Programming</li>
 						            <li><a href="#">HTML</a></li>
 						            <li><a href="#">Turing</a></li>
 						            <li><a href="#">Java</a></li>
