--- a/courses.html
+++ b/courses.html
@@ -125,37 +125,37 @@
 						<div class="bs-callout bs-callout-default">
 						<h1 style="float:left; color:#777; margin-top:0px;">9</h1>
 						  	<h4 style="font-size:1.6em;">BTT1DG</h4>
-						    <a href="courses/ics2dg.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn" style="background-color:#777; color:#FFF"> Learn More »</button></a>
+						    <a href="courses/ics2dg.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn" style="background-color:#777; color:#FFF; margin-top:-10px;"> Learn More &raquo;</button></a>
 						</div>
 						<div class="bs-callout bs-callout-primary">
 						<h1 style="float:left; color:#428BCA; margin-top:0px;">10</h1>
 						  	<h4 style="font-size:1.6em;">ICS2DG</h4>
-						    <a href="courses/ics2dg.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn btn-primary"> Learn More &raquo;</button></a>
+						    <a href="courses/ics2dg.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn btn-primary" style="margin-top:-10px;"> Learn More &raquo;</button></a>
 						</div>
 						<div class="bs-callout bs-callout-primary">
 						<h1 style="float:left; color:#428BCA; margin-top:0px;">10</h1>
 						  	<h4 style="font-size:1.6em;">ICS2O1</h4>
-						    <a href="courses/ics2O1.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn btn-primary"> Learn More &raquo;</button></a>
+						    <a href="courses/ics2O1.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn btn-primary" style="margin-top:-10px;"> Learn More &raquo;</button></a>
 						</div>
 						<div class="bs-callout bs-callout-info">
 						<h1 style="float:left; color:#5DC0BE; margin-top:0px;">11</h1>
 						  	<h4 style="font-size:1.6em;">ICS3U1</h4>
-						    <a href="courses/ics3u1.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn btn-info"> Learn More &raquo;</button></a>
+						    <a href="courses/ics3u1.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn btn-info" style="margin-top:-10px;"> Learn More &raquo;</button></a>
 						</div>
 						<div class="bs-callout bs-callout-info">
 						<h1 style="float:left; color:#5DC0BE; margin-top:0px;">11</h1>
 						  	<h4 style="font-size:1.6em;">ICS3C1</h4>
-						    <a href="courses/ics3c1.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn btn-info"> Learn More &raquo;</button></a>
+						    <a href="courses/ics3c1.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn btn-info" style="margin-top:-10px;"> Learn More &raquo;</button></a>
 						</div>
 						<div class="bs-callout bs-callout-success">
 						<h1 style="float:left; color:#5CB85C; margin-top:0px;">12</h1>
 						  	<h4 style="font-size:1.6em;">ICS4U1</h4>
-						    <a href="courses/ics4u1.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn btn-success"> Learn More &raquo;</button></a>
+						    <a href="courses/ics4u1.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn btn-success" style="margin-top:-10px;"> Learn More &raquo;</button></a>
 						</div>
 						<div class="bs-callout bs-callout-success">
 						<h1 style="float:left; color:#5CB85C; margin-top:0px;">12</h1>
 						  	<h4 style="font-size:1.6em;">ICS4C1</h4>
-						    <a href="courses/ics4c1.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn btn-success"> Learn More &raquo;</button></a>
+						    <a href="courses/ics4c1.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn btn-success" style="margin-top:-10px;"> Learn More &raquo;</button></a>
 						</div>
 					</div>
 					<div class="col-md-4 colfix">
