--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <span class="caret"></span></a>
 
 					          	<ul class="dropdown-menu" role="menu">
-						          	<li role="presentation" class="dropdown-header">engineering</li>
+						          	<li role="presentation" class="dropdown-header">Engineering</li>
 						          	<li><a href="#">Robotics</a></li>
 						          	<li class="divider"></li>
 					          	    <li role="presentation" class="dropdown-header">Programming</li>
