--- a/courses/ics3c1.html
+++ b/courses/ics3c1.html
@@ -10,7 +10,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-		<link href="css/styles.css" rel='stylesheet'>
+		<link href="../css/styles.css" rel='stylesheet'>
 
 		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
@@ -102,16 +102,7 @@
 		</div>
 
 
-		<div class="center fix">
-			<div class="page-header" style="margin-left:100px;">
-				<h1>Courses <small> Markville Computer Science</small></h1>
-			</div>
-			<div class="bs-callout bs-callout-default">
-			  	<h4>Default Callout</h4>
-			    This is a default callout.
-			</div>
 
-		</div>
 
 		<!-- END NAV -->
 	</body>
